added /book/getBestsellers doc
