# api/swagger.yaml
@@ -123,18 +123,36 @@ paths:
     get:
       tags:
       - "book"
-      summary: "Finds the books that have sold the most"
-      description: ""
+      summary: "Finds the bestsellers"
+      description: "Returns an array containing all the books that have sold the most, ordered from the bestseller on"
       operationId: "getBestsellers"
       produces:
       - "application/json"
       responses:
         200:
-          description: "successful operation"
+          description: "Successful Operation"
           schema:
             type: "array"
             items:
               $ref: "#/definitions/Book"
+          examples:
+            application/json:  {
+              "ISBN": "1",
+              "favourite": true,
+              "name": "Comici Spaventati Guerrieri",
+              "theme": "love",
+              "genre": "mystery",
+              "status": "available",
+              "pictureURL": "https://images-eu.ssl-images-amazon.com/images/I/51PVDjr0qnL.jpg",
+              "plot": "Comici Spaventati Guerrieri is a metropolitan \"recherche\", narrated as a blues that rythms movements and placements, separations and meetings, walks and runs, kung-fu fights and shots, sudden loves and sudden friendships, dialogues and monologues, visions and dreams. It remarks the infinite distance between center and outskirt. This is a novel that underlines the cynicism, the golden corruption and the lack of intelligence that rules nowadays.",
+              "authors": [
+                "Stefano Benni"
+              ]
+            }
+        404:
+          description: "No sold book found in the database"
+          schema:
+            $ref: "#/definitions/ErrorMessage_NoObject"
       x-swagger-router-controller: "Book"
   /book/findBooksBy:
     get:
